--- a/FrontEnd/src/translations/en.json
+++ b/FrontEnd/src/translations/en.json
@@ -49,7 +49,11 @@
         "role": "Role",
         "save": "Save User",
         "image": "Avatar"
-
-
+    },
+    "notification": {
+        "create-user-success": "Create new user successfully",
+        "create-user-failed": "Create new user failed",
+        "delete-user-success": "Delete new user successfully",
+        "delete-user-failed": "Delete new user failed"
     }
 }
