--- a/FrontEnd/src/translations/en.json
+++ b/FrontEnd/src/translations/en.json
@@ -34,6 +34,9 @@
             "manage-specialty": "Manage Specialty",
             "handbook": "Handbook",
             "manage-handbook": "Manage handbook"
+        },
+        "doctor": {
+            "manage-scheduler": "Manage doctor's scheduler"
         }
     },
     "manage-user": {
