--- a/FrontEnd/src/translations/vi.json
+++ b/FrontEnd/src/translations/vi.json
@@ -34,6 +34,9 @@
             "manage-specialty": "Quản lí chuyên khoa",
             "handbook": "Cẩm nang",
             "manage-handbook": "Quản lí cẩm nang"
+        },
+        "doctor":{
+            "manage-scheduler": "Quản lý kế hoạch khám bệnh"
         }
     },
     "manage-user": {
