--- a/FrontEnd/src/translations/vi.json
+++ b/FrontEnd/src/translations/vi.json
@@ -35,7 +35,7 @@
             "handbook": "Cẩm nang",
             "manage-handbook": "Quản lí cẩm nang"
         },
-        "doctor":{
+        "doctor": {
             "manage-scheduler": "Quản lý kế hoạch khám bệnh"
         }
     },
@@ -67,5 +67,11 @@
     "homepage": {
         "out-standing-doctor": "Bác sĩ nổi bật tuần qua",
         "more-infor": "Xem thêm"
+    },
+    "manage-scheduler": {
+        "title": "Quản lí kế hoạch khám bệnh của bác sĩ",
+        "choose-doctor": "Chọn bác sĩ",
+        "choose-date": "Chọn ngày",
+        "save": "Lưu thông tin"
     }
 }
