--- a/FrontEnd/src/translations/en.json
+++ b/FrontEnd/src/translations/en.json
@@ -74,5 +74,35 @@
         "choose-doctor": "Choose doctor",
         "choose-date": "Choose date",
         "save": "Save"
+    },
+    "patient": {
+        "detail-doctor": {
+            "schedule": "Schedule",
+            "none-schedule": "The doctor does not have an appointment during this time. Please choose another time!",
+            "choose": "Choose ",
+            "book-free": " and book (free)"
+        },
+        "extra-infor-doctor": {
+            "text-address": "Clinic address",
+            "price": "Price: ",
+            "show-detail": "Show detail",
+            "payment": "Patients can pay costs in method: ",
+            "hide-price": "Hide detail"
+        }
+    },
+    "admin": {
+        "manage-doctor": {
+            "title": "Manage doctor's information",
+            "select-doctor": "Select doctor",
+            "intro": "Introductory information",
+            "add": "Create",
+            "save": "Save",
+            "select-price": "Select price",
+            "select-payment-method": "Select payment method",
+            "select-province": "Select province",
+            "clinic-name": "Clinic name",
+            "clinic-address": "Clinic address",
+            "note": "Note"
+        }
     }
 }
