--- a/FrontEnd/src/translations/vi.json
+++ b/FrontEnd/src/translations/vi.json
@@ -73,5 +73,35 @@
         "choose-doctor": "Chọn bác sĩ",
         "choose-date": "Chọn ngày",
         "save": "Lưu thông tin"
+    },
+    "patient": {
+        "detail-doctor": {
+            "schedule": "Lịch khám",
+            "none-schedule": "Bác sĩ không có lịch hẹn trong thời gian này. Vui lòng chọn thời gian khác",
+            "choose": "Chọn ",
+            "book-free": " và đặt lịch (miễn phí)"
+        },
+        "extra-infor-doctor": {
+            "text-address": "Địa chỉ phòng khám",
+            "price": "Giá khám: ",
+            "show-detail": "Xem chi tiết",
+            "payment": "Người bệnh có thể thanh toán chi phí bằng hình thức:",
+            "hide-price":"Ẩn bảng giá"
+        }
+    },
+    "admin": {
+        "manage-doctor": {
+            "title": "Quản lý thông tin bác sĩ",
+            "select-doctor": "Chọn bác sĩ",
+            "intro": "Thông tin giới thiệu: ",
+            "add": "Tạo thông tin",
+            "save": "Lưu thông tin",
+            "select-price": "Chọn giá",
+            "select-payment-method": "Chọn phương thức thanh toán: ",
+            "select-province": "Chọn tỉnh thành",
+            "clinic-name": "Tên phòng khám",
+            "clinic-address": "Địa chỉ phòng khám",
+            "note": "Ghi chú"
+        }
     }
 }
