--- a/FrontEnd/src/translations/vi.json
+++ b/FrontEnd/src/translations/vi.json
@@ -86,7 +86,21 @@
             "price": "Giá khám: ",
             "show-detail": "Xem chi tiết",
             "payment": "Người bệnh có thể thanh toán chi phí bằng hình thức:",
-            "hide-price":"Ẩn bảng giá"
+            "hide-price": "Ẩn bảng giá"
+        },
+        "booking-modal": {
+            "title": "Thông tin đặt lịch khám bệnh",
+            "fullname": "Họ và tên",
+            "phonenumber": "Số điện thoại",
+            "email": "Địa chỉ email",
+            "address": "Địa chỉ liên hệ",
+            "reason":"Lí do khám",
+            "birthday": "Ngày sinh",
+            "gender": "Giới tính",
+            "btn-confirm": "Xác nhận",
+            "btn-cancel": "Hủy",
+            "price": "Giá khám: "
+
         }
     },
     "admin": {
